@@ -58,15 +58,18 @@ if(MSVC)
 else()
     option(PEDANTIC "Compile with pedantic warnings" ON)
     option(WERROR "Treat warnings as errors" OFF)
-    add_compile_options(-O2 -Wno-sign-compare -fno-omit-frame-pointer)
+    add_compile_options(-Wno-sign-compare -fno-omit-frame-pointer)
     if(PEDANTIC)
         add_compile_options(-pedantic -Wall)
     endif()
     if(WERROR)
         add_compile_options(-Werror)
     endif()
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} ${DEB_FLAGS} -O0 -g")
-    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O3 -w")
+    if (CMAKE_BUILD_TYPE MATCHES Debug)
+        add_compile_options(-g)
+    else()
+        add_compile_options(-O3)
+    endif()
 endif()
 
 include(CTest)
